vendor/pin-project-1.0.7/tests/ui/cfg/packed_sneaky-span-issue-1.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> $DIR/packed_sneaky-span-issue-1.rs:5:15
  |
5 | #[hidden_repr(packed)] //~ ERROR may not be used on #[repr(packed)] types
  |               ^^^^^^
